added a second item for fun

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.tutorialmod.superite": "Superite Ingot"
+  "item.tutorialmod.superite": "Superite Ingot",
+  "item.tutorialmod.raw_superite": "Raw Superite"
+
 }
