--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -4,6 +4,9 @@
 
 
   "block.tutorialmod.superite_block": "Block of Superite",
-  "block.tutorialmod.raw_superite_block": "Block of Raw Superite"
+  "block.tutorialmod.raw_superite_block": "Block of Raw Superite",
+
+  "creativetab.tutorialmod.superite_items": "Superite Items",
+  "creativetab.tutorialmod.superite_blocks": "Superite Blocks"
 
 }
