added a chisel item that chisels block into their brick form using a map

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.tutorialmod.superite": "Superite Ingot",
   "item.tutorialmod.raw_superite": "Raw Superite",
+  "item.tutorialmod.chisel": "Chisel",
 
 
   "block.tutorialmod.superite_block": "Block of Superite",
