--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,12 +2,16 @@
   "item.tutorialmod.superite": "Superite Ingot",
   "item.tutorialmod.raw_superite": "Raw Superite",
   "item.tutorialmod.chisel": "Chisel",
+  "item.tutorialmod.kohlrabi": "Kohlrabi",
+  "item.tutorialmod.aurora_ashes": "Aurora Ashes",
 
 
   "block.tutorialmod.superite_block": "Block of Superite",
   "block.tutorialmod.raw_superite_block": "Block of Raw Superite",
   "block.tutorialmod.superite_ore": "Superite Ore",
   "block.tutorialmod.superite_deepslate_ore": "Deepslate Superite Ore",
+
+  "block.tutorialmod.magic_block": "Magic Block",
 
   "creativetab.tutorialmod.superite_items": "Superite Items",
   "creativetab.tutorialmod.superite_blocks": "Superite Blocks"
