added a lamp that turns complete white when you click it

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,6 +15,7 @@
   "block.tutorialmod.superite_deepslate_ore": "Deepslate Superite Ore",
 
   "block.tutorialmod.magic_block": "Magic Block",
+  "block.tutorialmod.flashbang_lamp": "Flashbang Lamp",
 
   "creativetab.tutorialmod.superite_items": "Superite Items",
   "creativetab.tutorialmod.superite_blocks": "Superite Blocks"
