added a woodsman's axe (logger_axe) that mines all connected wood blocks when you break one (not including diagonals)

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.tutorialmod.aurora_ashes": "Aurora Ashes",
 
   "item.tutorialmod.superite_sword": "Superite Sword",
+  "item.tutorialmod.logger_axe": "Woodsman's Axe",
 
 
   "block.tutorialmod.superite_block": "Block of Superite",
